<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/skyblue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skyblue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-150dp"
        android:contentDescription="@string/condition_icon"
        android:scaleType="fitXY"
        android:src="@drawable/na" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/temperature"
        android:textColor="#000000"
        android:textSize="72dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="20dp" />

    <!--

    <TextView
        android:id="@+id/currentCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/weatherIconImageView"
        android:layout_below="@+id/temperatureTextView"
        android:layout_marginTop="58dp"
        android:text="Current:"
        android:textColor="#000000"
        android:textSize="17dp" />


    <TextView
        android:id="@+id/conditionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/temperatureTextView"
        android:layout_alignTop="@+id/currentCondition"
        android:layout_marginLeft="5dp"
        android:text="@string/condition"
        android:textColor="#000000"
        android:textSize="17dp" />

        !-->

</RelativeLayout>